# Progetto-Reti-Informatiche

./: CMakeLists.txt  Client_History.txt  Log.txt  README.md  exec2022.sh  index.md  makefile.txt
Esercitazioni/Esercitazione1/: CLIENT  CLIENT1  Client1.c  SERVER1  Server1.c
Esercitazioni/Esercitazione2/: echo_client.c  echo_server.c
Progetto Reti informatiche/: Cheat sheet Programmazione distribuita.docx  Progetto reti informatiche 2021.docx
SERVER.dSYM/Contents/: Info.plist
SERVER.dSYM/Contents/Resources/DWARF/: SERVER
doc/: Documentazione.docx  chat_messaggio.drawio  creazione_gruppo.drawio  diagramma in.drawio  diagramma signup.drawio  diagramma_chat_finale.drawio  diagramma_hanging_finale.drawio  diagramma_in_finale.drawio  diagramma_notify_finale.drawio  diagramma_reti_2.drawio  diagramma_show_finale.drawio  diagramma_signup_finale.drawio  documentazione.docx  er.drawio  formato_msg.drawio  formato_msg_1.drawio  invio_file.drawio  messggio_server.drawio  ~$cumentazione.docx
src/: CMakeLists.txt  Chat.txt  Client_History.txt  Device.c  Log.txt  Registration.txt  Server.c  chat_buffer.txt  clients_history.txt  dev  exec2022.sh  hanging_data.txt  makefile  myHeader.h  registered_clients.txt  serv  utils.h
src/user1/: user1_logout_info.txt  user2.txt
src/user2/: user1.txt  user2_logout_info.txt
src/user3/: user3_logout_info.txt
src/user4/: user4_logout_info.txt
